# strfem

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sample_frame.py
src/strfem/: __init__.py  log.py  str_controller.py  str_line.py  str_line_load_concentrated.py  str_line_load_distributed.py  str_load_case.py  str_material.py  str_nodal_load.py  str_node.py  str_release.py  str_section.py  str_support.py  viewer.py
