[project]
name = "strfem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shubham", email = "shubhamchauhan550@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]

[project.scripts]
strfem = "strfem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
